@startuml
  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.APIClient {
          {static} ~ client : APIInterface
          {static} + getClient()
          - APIClient()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      interface com.zvibadash.sudosolve.networking.APIInterface {
          {static} + API_KEY : String
          {static} + BASE_URL : String
          {abstract} + generate()
          {abstract} + identify()
          {abstract} + isConnected()
          {abstract} + solve()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      enum DifficultyLevel {
        EASY
        HARD
        INSANE
        MEDIUM
        level
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.NetworkChangeReceiver {
          + onReceive()
          ~ checkConnection()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.RequestGeneration {
          + RequestGeneration()
          + getDiffLevel()
          + setDiffLevel()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.RequestIdentify {
          - image : String
          + RequestIdentify()
          + getImage()
          + setImage()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.RequestSolve {
          - unsolved : String
          + RequestSolve()
          + getUnsolved()
          + setUnsolved()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.ResponseCheckConnection {
          - connected : Boolean
          + getConnected()
          + setConnected()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.ResponseGenerated {
          - generated : String
          + getGenerated()
          + setGenerated()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.ResponseIdentify {
          - board : String
          + getBoard()
          + setBoard()
      }
    }
  }
  

  namespace com.zvibadash.sudosolve {
    namespace networking {
      class com.zvibadash.sudosolve.networking.ResponseSolved {
          - solved : String
          + getSolved()
          + setSolved()
      }
    }
  }
  

  com.zvibadash.sudosolve.networking.NetworkChangeReceiver -up-|> android.content.BroadcastReceiver
  com.zvibadash.sudosolve.networking.RequestGeneration o-- com.zvibadash.sudosolve.networking.DifficultyLevel : diffLevel
@enduml
